--- a/Marta/Fim.html
+++ b/Marta/Fim.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    
+    <link rel="stylesheet" href="..\css\Fim.css">
 </head>
 <body>
     Você escapa da redoma, mas ao sair você encontra um mundo desertico e destruido, não há vegetação, 
