--- a/Marta/Fim.html
+++ b/Marta/Fim.html
@@ -14,5 +14,8 @@
     e reconstruir aos poucos o mundo com os recursos que estão nas mãos de poucas pessoas.Você se junta a ele e a sua causa
 
     Fim
+
+    <button onclick='location.replace("../Projeto-1.html")'>Restart</button>
+    
 </body>
 </html>
