--- a/Questao2.html
+++ b/Questao2.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Questão 2</title>
+    <link rel="stylesheet" href=".\css\Questao2.css">
     <script src="./js/Isaquias3.js"></script>
 </head>
 <body>
