Alteração questão 2 alternativas

--- a/Questao2.html
+++ b/Questao2.html
@@ -12,7 +12,7 @@
     Um casal tem filhos e filhas. Cada filho tem um número de irmãos igual ao número de irmãs. Cada filha tem um número de irmãos igual ao dobro do número de irmãs.
 
 Quantos filhos e filhas tem o casal?
-1-4 filhos e 3 filhas  2-3 filhos e 4 filhas 3- 4 filhas e dois filho 4-2 filhos e 1 filha
+1-Quatro filhos e três filhas  2-Três filhos e quatro filhas 3- Quatro filhas e dois filhos 4-Dois filhos e uma filha
 
 <button onclick="func5()">Escolha um número</button>
 </body>
