--- a/Game_over.html
+++ b/Game_over.html
@@ -10,7 +10,7 @@
     
 </head>
 <body>
-    
+    Game Over
     <button onclick='location.replace("Projeto-1.html")'>Restart</button>
 </body>
 </html>
