--- a/Game_over.html
+++ b/Game_over.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href=".\css\Game_over.css">
+    <link rel="stylesheet" href=".\css\Game_Over.css">
     <script src="./js/Marta1.js"></script>
     
 </head>
