Alterando o tamanho das imagens

--- a/Projeto-1.html
+++ b/Projeto-1.html
@@ -11,11 +11,11 @@
 <body>
     <h1>Um mundo desconhecido</h1>
     <h2>Você está prestes a embarcar em um mundo desconhecido.Quem você escolhe? </h2>
-
+    <div class="images">
     <form action="./Marta/Marta1.html">
         <figure>
             <img src="assets\fd3ce297-1000-750x450.jpg" alt="">
-        </figure>
+        </figure> 
         <input type="submit" value="Marta" />
     </form>
 
@@ -31,5 +31,6 @@
         </figure>
         <input type="submit" value="Neymar" />
     </form>
+    </div>
 </body>
 </html>
