Alterações css borda e botão

--- a/Isaquias/Isaquias1.html
+++ b/Isaquias/Isaquias1.html
@@ -10,9 +10,13 @@
     <script src="../js/Isaquias1.js"></script>
 </head>
 <body>
+    <div class='container'>
  Você acorda em um quarto estranho e de paredes brancas e se pergunta aonde está, pois não se lembra de nada, você olha embaixo da cama e vê um bilhete.
  1-Ler o bilhete 2-Voltar a dormir
  
- <button onclick='func1()'>Faça sua escolha</button>
+ <button onclick='func1()'>
+    Faça sua escolha
+</button>
+    </div>
 </body>
 </html>
