--- a/Marta/Marta1.html
+++ b/Marta/Marta1.html
@@ -11,6 +11,7 @@
 </head>
 
 <body>
+    <div class='container'>
     Você acorda em uma cama dentro de um quarto de paredes brancas e ouve uma voz
     Bom dia Marta! Que bom que acordou, você está nesse momento em um ambiente controlado e sua missão é sair daqui.
 
@@ -20,6 +21,6 @@
     <button onclick='escolha1()'>
     Escolha um número
     </button> 
-
+    </div>
 </body>
 </html>
