--- a/Questao1.html
+++ b/Questao1.html
@@ -9,6 +9,7 @@
     <script src=./js/Marta2.js defer></script>
 </head>
 <body>
+    <div class='container'>
     Há não muito tempo atrás, num país distante, havia um velho rei que tinha três filhas, inteligentíssimas e de indescritível beleza, chamadas Guilhermina, Genoveva e Griselda.
     Sentindo-se perto de partir dessa para a melhor, e sem saber qual das filhas designar como sua sucessora, o velho rei resolveu submetê-las a um teste.
     A vencedora seria a nova soberana.
@@ -27,5 +28,6 @@
     <button onclick='escolha6()'>
         Escolha um alternativa
     </button>
+    </div>
 </body>
 </html>
