--- a/Questao2.html
+++ b/Questao2.html
@@ -9,11 +9,15 @@
     <script src="./js/Isaquias3.js"></script>
 </head>
 <body>
+    <div class='container'>
     Um casal tem filhos e filhas. Cada filho tem um número de irmãos igual ao número de irmãs. Cada filha tem um número de irmãos igual ao dobro do número de irmãs.
 
 Quantos filhos e filhas tem o casal?
 1-Quatro filhos e três filhas  2-Três filhos e quatro filhas 3- Quatro filhas e dois filhos 4-Dois filhos e uma filha
-
-<button onclick="func5()">Escolha um número</button>
+    
+<button onclick="func5()">
+    Escolha um número
+</button>
+    </div>
 </body>
 </html>
